# Robotics-Project

./: CMakeLists.txt  README.md  description.txt  package.xml  project1.rviz
cfg/: robot.cfg
launch/: calibration.launch  filtering.launch  filtering_test.launch  fix.launch  imu_filter.launch  localization.launch  mapping.launch  robot.launch  robot_calibration.launch  scout_localization.launch  scout_mapping.launch  sensor_fusion.launch
maps/: not-filtered.yaml
msg/: Correction.msg  DiffDriveSpeeds.msg
rviz/: filtering.rviz  localization.rviz  mapping.rviz
src/: calibration.cpp  fix_camera_odom.cpp  fix_scout_odom.cpp  robot.cpp
srv/: ResetPose.srv  SetPose.srv
